[gd_scene load_steps=5 format=2]

[ext_resource path="res://Towers/TowerAssemblies/BasicTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://View.gd" type="Script" id=3]
[ext_resource path="res://GameGrid.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="BasicTower" parent="." instance=ExtResource( 1 )]
position = Vector2( 54, 71 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="View" type="Camera2D" parent="."]
position = Vector2( 513, 512 )
current = true
smoothing_enabled = true
smoothing_speed = 20.0
script = ExtResource( 3 )

[node name="GameGrid" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="MobTimer" to="." method="_on_Timer_timeout"]
